--- a/tests/src/index.html.twig
+++ b/tests/src/index.html.twig
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Baobab Framework</title>
+		<title>biflora</title>
 	</head>
 	<body>
 		<p>test page.</p>
@@ -11,8 +11,8 @@
 
 		<!-- socket.io -->
 		<script src="/socket.io/socket.io.js" type="text/javascript"></script>
-		<!-- baobab-fw -->
-		<script src="/baobab-fw/baobab-fw.js" type="text/javascript"></script>
+		<!-- biflora -->
+		<script src="/biflora/biflora.js" type="text/javascript"></script>
 		<!-- main.js -->
 		<script src="/common/main.js" type="text/javascript"></script>
 	</body>
